--- a/src/main/resources/templates/add_license_stac.html
+++ b/src/main/resources/templates/add_license_stac.html
@@ -14,7 +14,7 @@
 <p>Введите данные для новой лицензии (все поля обязателны для заполнения)</p>
 <form th:action="@{/license/stac/add_license_stac/{mcod}(mcod=${lpu.mkod})}" th:object="${newLicenseStacForm}" method="POST">
     <p>Код ЛПУ:</p>
-    <input type="text" th:field="*{mcod}" />
+    <input type="text" th:field="*{mcod}" disabled/>
     <br/>
     <p>Тип стационара:</p>
     <select th:field="*{stacType}">
