--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -17,6 +17,8 @@
     |
     <a th:href="@{/fys}">Cправочник медицинских услуг</a>
     |
+    <a th:href="@{/publish}">Публикация на сайт</a>
+    |
     <a th:href="@{/adm}">Администрирование</a>
 </div>
 </body>
