--- a/src/main/resources/templates/adm.html
+++ b/src/main/resources/templates/adm.html
@@ -16,6 +16,27 @@
 </div>
 
 <div>
+    <p>Загрузка cправочника ПФ СМП из справочника в формате xml:</p>
+    <form method="post" th:action="@{/upload_funding_norma_smp_xml}" enctype="multipart/form-data">
+
+        <label class="input-file">
+            <span class="input-file-text" type="text"></span>
+            <input type="file" name="file" accept=".xml">
+            <span class="input-file-btn">Выберите файл</span>
+        </label>
+
+        <input class="input-file-submit" type="submit" value="Загрузить" />
+
+    </form>
+    <script>
+        $('.input-file input[type=file]').on('change', function(){
+            let file = this.files[0];
+            $(this).closest('.input-file').find('.input-file-text').html(file.name);
+        });
+    </script>
+</div>
+
+<div>
     <h4>Обновление классификатора профилей оказанной медицинской помощи v002:</h4>
     <form method="post" th:action="@{/adm/upload_v002_xml}" enctype="multipart/form-data">
 
