+ возм-ть заполнять спр.ПФ СМП по предыдущему месяцу

--- a/src/main/resources/templates/funding_norma_smp.html
+++ b/src/main/resources/templates/funding_norma_smp.html
@@ -36,6 +36,7 @@ $('.input-file input[type=file]').on('change', function(){
 });
 </script>
 </div>
+<p><a href="/fill_next_month_norma_smp">Перенос данных из предыдущего месяца</a></p>
 <p><a href="/api/pd_tarif">Скачать справочник нормативов по подушевому финансированию скорой медицинской помощи</a></p>
 
 <div  class="scroll-table">
