--- a/src/main/resources/templates/funding_norma_smp.html
+++ b/src/main/resources/templates/funding_norma_smp.html
@@ -39,6 +39,14 @@ $('.input-file input[type=file]').on('change', function(){
 <p><a href="/fill_next_month_norma_smp">Перенос данных из предыдущего месяца</a></p>
 <p><a href="/api/pd_tarif">Скачать справочник нормативов по подушевому финансированию скорой медицинской помощи</a></p>
 
+<form th:action="@{/funding_norma_smp/show_period}" th:object="${showPeriodForm}" method="POST">
+  <input type="submit" value="Показать за период" />
+  Дата начала:
+  <input type="date" th:field="*{dateFrom}" />
+  Дата конца:
+  <input type="date" th:field="*{dateTo}" />
+</form>
+
 <div  class="scroll-table">
 <table>
   <col style="width:10%">
