--- a/src/main/resources/templates/fap.html
+++ b/src/main/resources/templates/fap.html
@@ -13,12 +13,14 @@
   <tr>
     <th>OID</th>
     <th>ЛПУ</th>
-    <th>ФАП</th>
+    <th>ФАП финансируемые</th>
+    <th>ФАП по справочнику подразделений</th>
   </tr>
   <tr th:each="lpu:${lpuList}">
     <td th:utext="${lpu.moLpu}">..</td>
     <td th:utext="${lpu.nameS}">..</td>
     <td><a th:href="@{fap_by_lpu/{lpu}(lpu=${lpu.moLpu})}" th:utext="${lpu.fapCount}">..</a></td>
+    <td><a th:href="@{/department/fap_dep_by_lpu/{lpu}(lpu=${lpu.moLpu})}" >...</a></td>
   </tr>
 </table>
 
