+ обновление названий ФАП по справочнику подразделений

--- a/src/main/resources/templates/adm.html
+++ b/src/main/resources/templates/adm.html
@@ -161,5 +161,14 @@
 
 </div>
 
+<div>
+    <h4>Обновление справочника ФАП по справочнику подразделений</h4>
+    <p>Справочник подразделений должен быть обновлен в предыдущем пункте</p>
+    <form method="post" th:action="@{/update_fap}">
+        <input class="input-file-submit" type="submit" value="Обновить" />
+    </form>
+
+</div>
+
 </body>
 </html>
