--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 </form>
 
 <h4>Справочники доступные для скачивания:</h4>
-<p><a th:href="@{/fys/get_fys_dbf}">Справочник медицинских услуг (DBF)</a></p>
+<p><a th:href="@{/api/fys_xml}">Справочник медицинских услуг (XML)</a></p>
 <p><a th:href="@{/api/pd_tarif}">Справочник нормативов по подушевому финансированию скорой медицинской помощи (XML)</a></p>
 <p><a th:href="@{/get_norm_pd}">Справочник нормативов по подушевому финансированию амбулаторно-поликлинической помощи (XLS)</a></p>
 <p><a th:href="@{/api/sp_fin_fap/{year}(year=${#calendars.format(today,'yyyy')})}">Справочник нормативов по подушевому финансированию ФАП (XML)</a></p>
