+ поле ANEST в справочник FYS

--- a/src/main/resources/templates/fys.html
+++ b/src/main/resources/templates/fys.html
@@ -98,12 +98,12 @@ $('.input-file input[type=file]').on('change', function(){
     <input type="submit" value="Скачать" />
   </form>
 </div>
-<div>
-  <p>Скачать справочник obrc в формате DBF:</p>
-  <form method="get" th:action="@{/fys/get_obrc_dbf}">
-    <input type="submit" value="Скачать" />
-  </form>
-</div>
+<!--<div>-->
+<!--  <p>Скачать справочник obrc в формате DBF:</p>-->
+<!--  <form method="get" th:action="@{/fys/get_obrc_dbf}">-->
+<!--    <input type="submit" value="Скачать" />-->
+<!--  </form>-->
+<!--</div>-->
 
 </body>
 </html>
